--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
 	<properties>
 		<appengine.app.version>1.9.18</appengine.app.version>
+		<appengine.version>dev</appengine.version>
 		<jetty.version>9.2.8.v20150217</jetty.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<resteasy.version>3.0.1.Final</resteasy.version>
@@ -76,6 +77,12 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.6</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
