--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,16 @@
 			<version>${resteasy.version}</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>com.googlecode.objectify</groupId>
 			<artifactId>objectify</artifactId>
 			<version>5.1.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.wordnik</groupId>
+			<artifactId>swagger-jaxrs_2.10</artifactId>
+			<version>1.3.12</version>
 		</dependency>
 
 		<!-- Test Dependencies -->
